Supercluster/Cluster01/WebServer001/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver001-frontend-deployment
  namespace: webserver001
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver001-frontend
  template:
    metadata:
      labels:
        app: webserver001-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver001-frontend-container
          image: "ghcr.io/eliasdhcom/eliasdhcom-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver001-backend-deployment
  namespace: webserver001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver001-backend
  template:
    metadata:
      labels:
        app: webserver001-backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver001-backend-container
          image: "ghcr.io/eliasdhcom/eliasdhcom-backend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver001-ai-service-deployment
  namespace: webserver001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver001-ai-service
  template:
    metadata:
      labels:
        app: webserver001-ai-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver001-ai-service-container
          image: "ghcr.io/eliasdhcom/eliasdhcom-ai-service:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: "1Gi"
              cpu: "2000m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
---
