Supercluster/Cluster01/WebServer001/Service.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver001-frontend-service
  namespace: webserver001
spec:
  selector:
    app: webserver001-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
